# OpenCVGUI

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  OpenCVGUIConfig.cmake.in  README.md  feed.xml  index.html
css/: main.css  navbar.css
docs/: _config.yml  api.html  hello-world.html  index.md  installation.html
docs/_data/: nav_docs.yml
docs/_includes/: footer.html  hero.html  nav_docs.html  navigation.html
docs/_layouts/: default.html  docs.html  hero.html
docs/_plugins/: sidebar_item.rb
docs/_posts/: 2016-12-15-welcome-to-jekyll.markdown
docs/css/: main.css  syntax.css
docs/docs/: api.md  hello-world.md  installation.md
documentation/: uml.zargo
include/OpenCVGUI/: OGUI.h  OGUI3D.h  OGUIArea.h  OGUIButton.h  OGUICVWindow.h  OGUICheckBox.h  OGUIFile.h  OGUIFileBrowser.h  OGUIFormArea.h  OGUIImage.h  OGUIImageArea.h  OGUILayout.h  OGUIPlotArea.h  OGUIRadioButtons.h  OGUISlider.h  OGUITextInput.h  OGUITitle.h  OGUIUtils.h  OGUIVideoTimeline.h  OGUIWidget.h  OGUIWindow.h  common.h  perf.h  pseudocolor.h
resources/fonts/Varela_Round/: OFL.txt
resources/shaders/: frag.shader  vert.shader
src/: basic_sample.cpp  example.cpp  example1.cpp  example3d.cpp  example_2dplot.cpp  example_videotimeline.cpp  font2c.cpp
src/OpenCVGUI/: OGUI.cpp  OGUI3D.cpp  OGUIArea.cpp  OGUIButton.cpp  OGUICVWindow.cpp  OGUICheckBox.cpp  OGUIFile.cpp  OGUIFileBrowser.cpp  OGUIFormArea.cpp  OGUIImage.cpp  OGUIImageArea.cpp  OGUILayout.cpp  OGUIPlotArea.cpp  OGUIRadioButtons.cpp  OGUISlider.cpp  OGUITextInput.cpp  OGUITitle.cpp  OGUIUtils.cpp  OGUIVideoTimeline.cpp  OGUIWidget.cpp  OGUIWindow.cpp  perf.c  pseudocolor.c
src/OpenCVGUI/resources/: fontawesome.cpp  fontroboto.cpp  fontvalera.cpp
